[package]
name = "my_scene_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { version = "0.10.0", features = ["dynamic"] } # Remember to revert this before releasing
bevy = "0.10.0"
bevy-inspector-egui = "0.18.0"
bevy_mod_debugdump = "0.7.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
animation = []
